Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ function goHome() {
 
     <div class="section">
         <div class="section-title">Repositories</div>
-        <a class="btn sileo" href="#">Sileo</a>
+        <a class="btn sileo" href="https://itsflameee.github.io/jailed/sileo/">Sileo</a>
         <a class="btn cydia" href="#">Cydia</a>
     </div>
 
