new file:   icons/template_ios.png modified:   sileo/index.html

--- a/sileo/index.html
+++ b/sileo/index.html
@@ -25,7 +25,7 @@ body {
     width: 48px;  /* можно менять */
     height: 48px;
     object-fit: cover;
-    border-radius: 8px; /* слегка скругляем */
+    border-radius: 8px;
     margin-right: 12px;
 }
 
