modified:   index.html modified:   sileo/index.html

--- a/sileo/index.html
+++ b/sileo/index.html
@@ -98,7 +98,7 @@ body {
 
 <script>
 function goHome() {
-    window.location.href = "index.html"; // ссылка на главную страницу
+    window.location.href = "https://itsflameee.github.io/jailed/";
 }
 </script>
 
