--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body {
 
 <script>
 function goHome() {
-    window.location.href = "index.html";
+    window.location.href = "https://itsflameee.github.io/jailed/";
 }
 </script>
 
