new file:   icons/logo.png modified:   index.html modified:   sileo/index.html

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ function goHome() {
 <body>
 
 <div class="header" onclick="goHome()">
-    <img src="logo.png" alt="Logo">
+    <img src="/logo.png" alt="Logo">
     <div class="header-title">its.flame's Jailed</div>
 </div>
 
