--- a/sileo/index.html
+++ b/sileo/index.html
@@ -107,7 +107,7 @@ function goHome() {
 <body>
 
 <div class="header" onclick="goHome()">
-    <img src="logo.png" alt="Logo">
+    <img src="/icons/logo.png" alt="Logo">
     <div class="header-title">its.flame's Jailed</div>
 </div>
 
