--- a/sileo/index.html
+++ b/sileo/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>its.flame's Jailbreak Collection</title>
+<link rel="icon" href="../favicon.png" type="image/x-icon">
 
 <style>
 body {
@@ -107,7 +108,7 @@ function goHome() {
 <body>
 
 <div class="header" onclick="goHome()">
-    <img src="/logo.png" alt="Logo">
+    <img src="../logo.png" alt="Logo">
     <div class="header-title">its.flame's Jailed</div>
 </div>
 
