modified:   index.html

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ body {
     border-radius: 22px;
 
     box-shadow:
-        0 0 22px rgba(155, 92, 255, 0.35),
+        0 0 90px rgba(155, 92, 255, 0.35),
         inset 0 0 0 1px rgba(255, 255, 255, 0.04);
 
     text-align: center;
@@ -413,7 +413,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="card-text">Access its.flame's Jailed directly from your iOS home screen!</div>
             <div class="card-hint">Available only on iOS 12 and newer, open this via Safari</div>
 
-            <a class="card-btn" href="#">
+            <a class="card-btn" href="https://github.com/itsflameee/jailed/releases/download/jailed/jailed.mobileconfig">
                 <img src="icons/emoji_icons/paper.png" alt="">
                 Install .mobileconfig
             </a>
