modified:   index.html

--- a/index.html
+++ b/index.html
@@ -176,8 +176,13 @@ body {
 .btn.localdevvpn::before {
     background-image: url("icons/localdevvpn.png")
 }
+
 .btn.enswilde::before {
     background-image: url("icons/enswilde.png");
+}
+
+.btn.exampleapp::before {
+    background-image: url("icons/template_ios.png");
 }
 
 
@@ -410,6 +415,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <a class="btn stikdebug" href="#">StikDebug</a>
             <a class="btn localdevvpn" href="#">LocalDevVPN</a>
             <a class="btn enswilde" href="#">EnsWilde</a>
+            <a class="btn exampleapp" href="#">Example App</a>
         </div>
 
         <div class="subsection">
