new file:   icons/emoji_icons/guide.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@ body {
     background-image: url("icons/ytmusicultimate.png");
 }
 
+.btn.guide::before {
+    background-image: url("icons/emoji_icons/guide.png");
+}
+
 /* other */
 .btn:hover {
     box-shadow: 0 0 28px rgba(155, 92, 255, 1);
@@ -427,10 +431,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <div class="section">
         <div class="section-title">Guides</div>
-    </div>
-
-    <div class="hint">
-        Открывай страницу в Safari на iOS
+        <a class="btn guide" href="#">Simple iOS Sideload</a>
+        <a class="btn guide" href="#">Jailbreak Methods</a>
+        <a class="btn guide" href="#">PosterBoard tweaks</a>
     </div>
 </div>
 
