modified:   index.html

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <div class="card-hint">Explore this ultimate collection on your device! You can open this on any your iDevice, just click "Share".</div>
                 
                 <div class="card-btns">
-                    <a class="card-btn">
+                    <a class="card-btn" href="https://github.com/itsflameee/jailed/tree/main">
                         <img src="icons/github.png" alt="">
                         GitHub
                     </a>
@@ -428,7 +428,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <div class="card-text">its.flame's Jailed is the ultimate collection for jailbroken and jailed iOS devices</div>
                 <div class="card-hint">Explore this ultimate collection on your device!</div>
 
-                <a class="card-btn">
+                <a class="card-btn" href="https://github.com/itsflameee/jailed/tree/main">
                     <img src="icons/github.png" alt="">
                     GitHub
                 </a>
