--- a/index.html
+++ b/index.html
@@ -423,6 +423,24 @@ document.addEventListener("DOMContentLoaded", () => {
                 </div>
             </div>
 
+            <div class="card safari-only">
+                <div class="card-title">Welcome to its.flame's Jailed!</div>
+                <div class="card-text">its.flame's Jailed is the ultimate collection for jailbroken and jailed iOS devices</div>
+                <div class="card-hint">Explore this ultimate collection on your device! You can open this on any your iDevice, just click "Share".</div>
+                
+                <div class="card-btns">
+                    <a class="card-btn" href="https://github.com/itsflameee/jailed/tree/main">
+                        <img src="icons/github.png" alt="">
+                        GitHub
+                    </a>
+
+                    <a class="card-btn" id="shareBtn">
+                        <img src="icons/emoji_icons/share.png" alt="">
+                        Share
+                    </a>
+                </div>
+            </div>
+
             <div class="card desktop-only">
                 <div class="card-title">Welcome to its.flame's Jailed!</div>
                 <div class="card-text">its.flame's Jailed is the ultimate collection for jailbroken and jailed iOS devices</div>
