modified:   index.html

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="card safari-only">
                 <div class="card-title">Welcome to its.flame's Jailed!</div>
                 <div class="card-text">its.flame's Jailed is the ultimate collection for jailbroken and jailed iOS devices</div>
-                <div class="card-hint">Explore this ultimate collection on your device! You can open this on any your iDevice, just click "Share".</div>
+                <div class="card-hint">Explore this ultimate collection on your device! You can install .mobileconfig to get the web-clip on this iDevice!</div>
                 
                 <div class="card-btns">
                     <a class="card-btn" href="https://github.com/itsflameee/jailed/tree/main">
@@ -434,9 +434,9 @@ document.addEventListener("DOMContentLoaded", () => {
                         GitHub
                     </a>
 
-                    <a class="card-btn" id="shareBtn">
-                        <img src="icons/emoji_icons/share.png" alt="">
-                        Share
+                    <a class="card-btn" href="#webclipCard">
+                        <img src="icons/emoji_icons/paper.png" alt="">
+                        .mobileconfig
                     </a>
                 </div>
             </div>
@@ -533,7 +533,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <div class="section">
         <div class="section-title">Web-clip</div>
 
-        <div class="card safari-only">
+        <div class="card safari-only" id="webclipCard">
             <div class="card-title">Install web-clip now!</div>
             <div class="card-text">Access its.flame's Jailed directly from your iOS home screen!</div>
             <div class="card-hint">Available only on iOS 12 and newer, open this via Safari</div>
