modified:   index.html

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@ body {
 
 @media (max-width: 320px) {
     .btn {
-        padding: 14px 12px;       /* чуть меньше паддинг */
-        font-size: 18px;           /* текст чуть меньше, чтобы не давил */
+        padding: 14px 12px;
+        font-size: 18px;
     }
 
     .btn::before {
-        width: 1.2em;              /* иконка чуть больше по отношению к тексту */
+        width: 1.2em;
         height: 1.2em;
-        margin-right: 0.5em;       /* немного пространства */
+        margin-right: 0.5em;
     }
 
     .card-btn {
@@ -248,7 +248,7 @@ body {
     }
 
     .card-btn img {
-        width: 20px;               /* чуть крупнее для читаемости */
+        width: 20px;
         height: 20px;
     }
 }
@@ -523,9 +523,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <div class="section">
         <div class="section-title">Guides</div>
-        <a class="btn guide" href="#">Simple iOS Sideload</a>
+        <a class="btn guide" href="https://github.com/itsflameee/jailed/blob/main/guides/simple_sideload.md">Simple iOS Sideload</a>
         <a class="btn guide" href="#">Jailbreak Methods</a>
-        <a class="btn guide" href="#">PosterBoard tweaks</a>
+        <a class="btn guide" href="#">SpringBoard & PosterBoard tweaks</a>
     </div>
 </div>
 
