modified:   index.html

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <a class="btn livecontainer" href="#">LiveContainer</a>
             <a class="btn pocketposter" href="#">Pocket Poster</a>
             <a class="btn stikdebug" href="#">StikDebug</a>
-            <a class="btn localdevvpn" href="#">LocalDevVPN</a>
+            <a class="btn localdevvpn" href="https://github.com/itsflameee/jailed/blob/main/guides/localdevvpn.md">LocalDevVPN</a>
             <a class="btn enswilde" href="#">EnsWilde</a>
             <a class="btn exampleapp" href="#">Example App</a>
         </div>
