--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@ body {
     padding: 16px 20px;
     cursor: pointer;
     background: #0b0b0f;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0) 100%
+    );
+
+    z-index: 999;
+    pointer-events: auto;
 }
 
 .header img {
@@ -49,6 +63,7 @@ body {
 .absoulute-title {
     font-size: 40px;
     font-weight: 900;
+    margin-top: 80px;
     margin-bottom: 18px;
     text-align: center;
 }
