modified:   index.html

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <div class="subsection">
             <div class="subsection-title">Alternate stores for iOS</div>
             <a class="btn altstore" href="#">AltStore</a>
-            <a class="btn sidestore" href="#">SideStore</a>
+            <a class="btn sidestore" href="https://github.com/itsflameee/jailed/blob/main/guides/sidestore.md">SideStore</a>
         </div>
 
         <div class="subsection">
