modified:   index.html

--- a/index.html
+++ b/index.html
@@ -566,12 +566,12 @@ document.addEventListener("DOMContentLoaded", () => {
 
         <div class="subsection">
             <div class="subsection-title">Helpful Tools & Exploits</div>
-            <a class="btn livecontainer" href="#">LiveContainer</a>
+            <a class="btn livecontainer" href="https://github.com/itsflameee/jailed/blob/main/guides/sidestore.md">LiveContainer</a>
             <a class="btn pocketposter" href="#">Pocket Poster</a>
             <a class="btn stikdebug" href="#">StikDebug</a>
             <a class="btn localdevvpn" href="https://github.com/itsflameee/jailed/blob/main/guides/localdevvpn.md">LocalDevVPN</a>
             <a class="btn enswilde" href="#">EnsWilde</a>
-            <a class="btn exampleapp" href="#">Example App</a>
+            <a class="btn exampleapp" href="https://github.com/itsflameee/jailed/blob/main/guides/example_app.md">Example App</a>
         </div>
 
         <div class="subsection">
